# octocat

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: build.yml  codeql-analysis.yml  lint.yml  main.yml  status_embed.yml
octocat/: __init__.py  __main__.py  bot.py  config.py  extensions.py  octocat.py
octocat/exts/backend/: error_handler.py
octocat/exts/information/: ping.py
octocat/exts/utils/: colour.py  status.py
octocat/static/tags/: tag.md
