[tool.poetry]
name = "octocat"
version = "0.1.0"
description = "A moderation and utility bot for GitHub Discord"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
disnake = "^2.3.0"
loguru = "^0.5.3"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.2"
flake8-annotations = "^2.6.2"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.0.0"
pre-commit = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
